[metadata]
name = clearkit
version = 0.1
author = U. Melendez
author_email = clearkitpy@bfjournal.com
description = Complementary code for your programming pleasure
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ulygit/clearkit
project_urls =
    Bug Tracker = https://github.com/ulygit/clearkit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =

[options.packages.find]
where = src

[aliases]
test=pytest
